--- a/Assignment3.html
+++ b/Assignment3.html
@@ -8,7 +8,38 @@
 
   <body>
 
+    <div id="border1">
+      <div>
+        <img id="image1" src="Sassys.jpg" alt="Sassys"/>
+      </div>
+    </div>
 
+    <div id="border2">
+      <div>
+        <p class="F1">Menu</p>
+      </div>
+    </div>
+
+    <div id="border3">
+      <div id="border4">
+        <p class="F1">Seasonal Offers</p>
+      </div>
+    </div>
+
+    <div id="border5">
+      <div>
+        <p class="F1">Pizza Specials</p>
+        <img id="image2" src="pizza.jpg" alt="pizza"/>
+      </div>
+    </div>
+
+    <div id="border6">
+      <p class="F1">About Us</p>
+    </div>
+
+    <div id="border7">
+      <p class="F1">Socials</p>
+    </div>
 
 
   </body></html>
