--- a/Assignment3.html
+++ b/Assignment3.html
@@ -23,22 +23,26 @@
     <div id="border3">
       <div id="border4">
         <p class="F1">Seasonal Offers</p>
+        <p class="F2">Text</p>
       </div>
     </div>
 
     <div id="border5">
       <div>
         <p class="F1">Pizza Specials</p>
+        <p class="F2">Text</p>
         <img id="image2" src="pizza.jpg" alt="pizza"/>
       </div>
     </div>
 
     <div id="border6">
       <p class="F1">About Us</p>
+      <p class="F2">Text</p>
     </div>
 
     <div id="border7">
       <p class="F1">Socials</p>
+      <p class="F2">Text</p>
     </div>
 
 
